# End-to-end-music-streaming-pipeline

./: .env.example  .env.gcp.example  .gitignore  ADMINER_GUIDE.md  LOCAL_SETUP.md  README.md  adminer_queries.sql  docker-compose.local.yml  docker-compose.yml  load_env.ps1  publish_events.py  publish_test_events.py
dagster/: Dockerfile  pyproject.toml  requirements.txt
dagster/dagster_home/: dagster.yaml  workspace.yaml
dagster/dagster_home/.telemetry/: id.yaml
dagster/dagster_pipeline/: __init__.py
dagster/dagster_pipeline/assets/: __init__.py  bigquery_assets.py  dbt_assets.py  spark_assets.py
dbt/: dbt_project.yml
dbt/macros/: cross_db_utils.sql
dbt/models/: schema.yml
dbt/models/marts/: mart_active_users.sql  mart_daily_summary.sql  mart_hourly_metrics.sql  mart_location_analytics.sql  mart_top_artists.sql  mart_top_songs.sql
docs/: GCP_ARCHITECTURE.md  GCP_OPERATIONS.md  PIPELINE_GUIDE.md
eventsim/docker/: Dockerfile  Dockerfile.complete  eventsim.sh
eventsim/kubernetes/: Kustomization  eventsim.yml
postgres/: init.sql
redpanda/: docker-compose.yml
scripts/: deploy_gcp.ps1  deploy_gcp.sh
spark_streaming/: Dockerfile  Dockerfile.gcp  docker-compose.test.yml  requirements.txt
spark_streaming/src/: batch_to_gcs.py  config.py  realtime_streaming.py  streaming_to_gcs.py  streaming_to_gcs_pubsub.py  streaming_to_postgres.py  test_local.py  test_pubsub_batch.py  test_simple.py
terraform/: bigquery.tf  dataproc.tf  iam.tf  main.tf  outputs.tf  pubsub.tf  terraform.tfvars.example  variables.tf
terraform/scripts/: dataproc-init.sh
(+5 files in other folders)
