[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster_pipeline"
version = "0.1.0"
description = "Dagster orchestration for SoundFlow data pipeline"
authors = [{name = "SoundFlow Team"}]
requires-python = ">=3.9"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-dbt",
    "google-cloud-bigquery",
    "google-cloud-storage",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "dagster-webserver",
]

[tool.dagster]
module_name = "dagster_pipeline"
code_location_name = "soundflow_pipeline"

[tool.setuptools.packages.find]
where = ["."]
include = ["dagster_pipeline*"]
